# claudecode-session-notes

./: .ci-knowledge-base.md  .gitignore  .mcp.json  .pre-commit-config.yaml  FINAL-QUALITY-REPORT.md  PIXI_OPTIMIZATION_STATUS.md  README.md  URGENT-CI-FAILURE-ANALYSIS.md  check_fastmcp.py  check_testing_mode.py  coverage-fix-summary.md  coverage.json  coverage.xml  docker-compose.yml  final-error-recovery-analysis.md  github-workflow-integration-report.md  pyproject.toml  simple_test.py  test-coverage-failure-analysis.md  test_direct.py
.claude/: settings.local.json
.claude/agents/: action-reorganizer.md  compliance-verifier.md.backup  conflict-resolver.md  cross-platform-implementer.md  mcp-integration-manager.md  pixi-optimizer.md  project-initializer.md
.claude/commands/: agent_priming.md  atomic_init.md  atomic_refactor.md  atomic_status.md  development_commit.md  development_init.md  development_status.md  development_tdd_cycle.md  development_workflow.md  github_workflow_status.md  tdd_cycle.md  tdd_init.md
.claude/commands/tm/: learn.md
.claude/commands/tm/add-subtask/: add-subtask.md
.claude/commands/tm/models/: view-models.md
.claude/commands/tm/setup/: install-taskmaster.md
.claude/commands/tm/workflows/: command-pipeline.md
.claude/session-notes/session-20250730-152733/: decisions-log.json  session-metadata.json  session-summary.json
.claude/session-notes/session-20250730-152733/agents/: README.md
.github/: CI-README.md  ci-config.yml
.github/workflows/: ci.yml  performance.yml  security-audit.yml
.github/workflows/backup-20250820-144448/: security-audit.yml
.taskmaster/: CLAUDE.md  state.json
.taskmaster/docs/: db-integration-prd.txt  prd.txt
.taskmaster/reports/: task-complexity-report_db-integration.json
.taskmaster/tasks/: tasks.json
ci_tests/: fastmcp_functionality.py  fastmcp_server_startup.py  file_storage.py  pydantic_validation.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_069d18af31c71a67___init___py.html  z_069d18af31c71a67_server_py.html
scripts/: local-quality-check.py  pixi-ci-optimize.sh  validate-ci-setup.py
src/session_notes/: __init__.py  server.py
tests/: __init__.py  test_90_percent_coverage.py  test_actual_fastmcp_coverage.py  test_agent_interaction_tracking.py  test_agent_logging.py  test_analytics_coverage_boost.py  test_analytics_report.py  test_basic.py  test_cli_data_endpoints.py  test_comprehensive_metadata.py  test_coverage_boost.py  test_coverage_gap_fixes.py  test_fastmcp_integration_simple.py  test_fastmcp_tools_coverage.py  test_file_operations.py  test_final_90_percent.py  test_high_level_io_handlers.py  test_missing_tool_detection.py  test_models_validation.py  test_server.py  test_session_creation.py  test_storage_layer.py  test_storage_utilities.py  test_tool_request_execution_time.py
